# Exorcist

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cmake_full.txt  codecov.yml  ctest_full.txt  ctest_full2.txt  ctest_out3.txt  ctest_out4.txt  ctest_out5.txt  gap_out.txt  launch_stderr.txt  plugin_registry.json  sonar-project.properties  test_out.txt  ul_crash_diag2.txt  ul_crash_diag3.txt  ul_crash_diag4.txt  ul_crash_stderr.txt  ul_test2.txt  ul_test3.txt  ultra_chat_cpp.patch
cmake/luajit/: CMakeLists.txt
cmake/ultralight/: CMakeLists.txt
components/terminal/: CMakeLists.txt  terminalcomponent.cpp  terminalcomponent.h
plugins/: CMakeLists.txt
plugins/automation/: CMakeLists.txt  automationplugin.cpp  automationplugin.h  plugin.json  taskdiscovery.cpp  taskdiscovery.h  taskrunnerpanel.cpp  taskrunnerpanel.h
plugins/byok/: CMakeLists.txt  byokplugin.cpp  byokplugin.h  byokprovider.cpp  byokprovider.h  plugin.json
plugins/claude/: CMakeLists.txt  claudeplugin.cpp  claudeplugin.h  claudeprovider.cpp  claudeprovider.h  plugin.json
plugins/codex/: CMakeLists.txt  codexplugin.cpp  codexplugin.h  codexprovider.cpp  codexprovider.h  plugin.json
plugins/common/: CMakeLists.txt  sseparser.cpp  sseparser.h
plugins/copilot/: CMakeLists.txt  copilotauthdialog.cpp  copilotauthdialog.h  copilotplugin.cpp  copilotplugin.h  copilotprovider.cpp  copilotprovider.h  copilottoken.h  plugin.json
plugins/cpp-language/: CMakeLists.txt  clangdmanager.cpp  clangdmanager.h  cpplanguageplugin.cpp  cpplanguageplugin.h  cppworkspacepanel.cpp  cppworkspacepanel.h  plugin.json
plugins/debug/: CMakeLists.txt  debugpanel.cpp  debugplugin.cpp  debugplugin.h  disassemblypanel.cpp  disassemblypanel.h  gdbmiadapter.cpp  gdbmiadapter.h  memoryviewpanel.cpp  memoryviewpanel.h  plugin.json  quickwatchdialog.h  watchpointdialog.cpp  watchpointdialog.h  watchtreemodel.h
plugins/devops/: CMakeLists.txt  devopspanel.cpp  devopspanel.h  devopsplugin.cpp  devopsplugin.h  plugin.json  servicediscovery.cpp  servicediscovery.h
plugins/embedded-tools/: CMakeLists.txt  embeddedcommandresolver.cpp  embeddedcommandresolver.h  embeddedtoolspanel.cpp  embeddedtoolspanel.h  embeddedtoolsplugin.cpp  embeddedtoolsplugin.h  plugin.json
plugins/git/: CMakeLists.txt  diffexplorerpanel.cpp  diffexplorerpanel.h  gitpanel.cpp  gitpanel.h  gitplugin.cpp  gitplugin.h  inlineblameoverlay.cpp  inlineblameoverlay.h  mergeeditor.cpp  mergeeditor.h  plugin.json
plugins/github/: CMakeLists.txt  ghpanel.h  ghservice.cpp  githubplugin.cpp  githubplugin.h  plugin.json
plugins/javascript-sdk/: CMakeLists.txt  jshostapi.cpp  jshostapi.h  jspluginruntime.cpp  jspluginruntime.h  jspluginsdkplugin.cpp  jspluginsdkplugin.h  plugin.json  ultralightpluginview.cpp  ultralightpluginview.h
plugins/lang-pack/: CMakeLists.txt  langpackplugin.cpp  langpackplugin.h  plugin.json
plugins/ollama/: CMakeLists.txt  ollamaplugin.cpp  ollamaplugin.h  ollamaprovider.cpp  ollamaprovider.h  plugin.json
plugins/python-language/: CMakeLists.txt  plugin.json  pythonlanguageplugin.cpp  pythonlanguageplugin.h
plugins/qt-tools/: CMakeLists.txt  kitmanagerdialog.h  newqtclasswizard.cpp  newqtclasswizard.h  plugin.json  qthelpdock.cpp  qthelpdock.h  qttoolsplugin.cpp  qttoolsplugin.h
plugins/remote/: CMakeLists.txt  plugin.json  remotefilepanel.h  remotefilesystemmodel.cpp  remotehostinfo.cpp  remotehostinfo.h  remotelspmanager.cpp  remotelspmanager.h  remoteplugin.cpp  remoteplugin.h  remotesyncservice.cpp  remotesyncservice.h  sshconnectionmanager.h  sshsession.cpp  sshsession.h
plugins/rust-language/: CMakeLists.txt  plugin.json  rustlanguageplugin.cpp  rustlanguageplugin.h
plugins/search/: CMakeLists.txt  plugin.json  searchplugin.cpp  searchplugin.h
plugins/serial-monitor/: CMakeLists.txt  plugin.json  serialmonitorcontroller.cpp  serialmonitorcontroller.h  serialmonitorpanel.cpp  serialmonitorpanel.h  serialmonitorplugin.cpp  serialmonitorplugin.h
plugins/start-page/: CMakeLists.txt  plugin.json  startpageplugin.cpp  startpageplugin.h  welcomewidget.cpp
plugins/terminal/: CMakeLists.txt  plugin.json  terminalplugin.cpp  terminalplugin.h
plugins/testing/: CMakeLists.txt  plugin.json  testdiscoveryservice.cpp  testdiscoveryservice.h  testexplorerpanel.cpp  testingplugin.cpp  testingplugin.h  testrunnerservice.cpp  testrunnerservice.h
plugins/typescript-language/: CMakeLists.txt  plugin.json  typescriptlanguageplugin.cpp  (+1 more)
server/: CMakeLists.txt  authtokenservice.cpp  authtokenservice.h  gitwatchservice.cpp  gitwatchservice.h  main.cpp  mcpbridgeservice.cpp  mcpbridgeservice.h
src/: CMakeLists.txt  aiinterface.h  commandpalette.cpp  commandpalette.h  crashhandler.cpp  crashhandler.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_docks.cpp  mainwindow_menus.cpp  mainwindow_workspace.cpp  plugininterface.h  pluginmanager.cpp  pluginmanager.h  resources.qrc  serviceregistry.cpp  serviceregistry.h  startupprofiler.cpp  startupprofiler.h  thememanager.cpp  thememanager.h
tests/: CMakeLists.txt  lang_test_register.h  sandbox_test.cpp  test_agentuibus.cpp  test_autocompactor.cpp  test_bridgeclient.cpp  test_bridgeservices.cpp  test_buildtestservices.cpp  test_codefolding.cpp  test_codegraph.cpp  test_commandpalette.cpp  test_componentregistry.cpp  test_componentserviceadapter.cpp  test_contextbuilder.cpp  test_contextpruner.cpp  test_contributionregistry.cpp  test_coreinterfaces.cpp  test_crashhandler.cpp  test_diagnosticsnotifier.cpp  test_diffmerge.cpp  test_embeddedpanels.cpp  test_exobridge.cpp  test_featureflags.cpp  test_gitignorefilter.cpp  test_gitservice.cpp  test_highlighterfactory.cpp  test_http2hardening.cpp  test_ipcprotocol.cpp  test_jspluginruntime.cpp  test_keymapmanager.cpp  test_kit.cpp  test_languageprofile.cpp  test_lspclient.cpp  test_luascriptengine.cpp  test_marketplacesafety.cpp  test_mcptrust.cpp  test_multicursor.cpp  test_outputpanel.cpp  test_piecetable.cpp  test_pluginmanifest.cpp  (+30 more)
(+872 files in other folders)
