add_executable(exorcist WIN32
    main.cpp
    mainwindow.cpp
    mainwindow.h
    editor/editorview.cpp
    editor/editorview.h
    editor/diffviewerpanel.cpp
    editor/diffviewerpanel.h
    editor/proposededitpanel.cpp
    editor/proposededitpanel.h
    editor/breadcrumbbar.cpp
    editor/breadcrumbbar.h
    editor/minimapwidget.cpp
    editor/minimapwidget.h
    editor/codefoldingengine.cpp
    editor/codefoldingengine.h
    agent/inlinecompletionengine.cpp
    agent/inlinecompletionengine.h
    agent/nexteditengine.cpp
    agent/nexteditengine.h
    editor/largefileloader.cpp
    editor/largefileloader.h
    editor/syntaxhighlighter.cpp
    editor/syntaxhighlighter.h
    editor/treesitterhighlighter.cpp
    editor/treesitterhighlighter.h
    editor/highlighterfactory.cpp
    editor/highlighterfactory.h
    editor/languages/langcommon.h
    editor/languages/langcommon.cpp
    editor/languages/langbuilders.h
    editor/languages/lang_cpp.cpp
    editor/languages/lang_python.cpp
    editor/languages/lang_javascript.cpp
    editor/languages/lang_web.cpp
    editor/languages/lang_jvm.cpp
    editor/languages/lang_systems.cpp
    editor/languages/lang_scripting.cpp
    editor/languages/lang_shell.cpp
    editor/languages/lang_data.cpp
    editor/languages/lang_config.cpp
    editor/textbuffer.h
    editor/piecetablebuffer.cpp
    editor/piecetablebuffer.h
    debug/idebugadapter.h
    debug/gdbmiadapter.cpp
    debug/gdbmiadapter.h
    debug/debugpanel.cpp
    debug/debugpanel.h
    debug/watchtreemodel.cpp
    debug/watchtreemodel.h
    debug/quickwatchdialog.cpp
    debug/quickwatchdialog.h
    remote/sshprofile.h
    remote/sshsession.cpp
    remote/sshsession.h
    remote/sshconnectionmanager.cpp
    remote/sshconnectionmanager.h
    remote/remotefilesystemmodel.cpp
    remote/remotefilesystemmodel.h
    remote/remotefilepanel.cpp
    remote/remotefilepanel.h
    remote/remotesyncservice.cpp
    remote/remotesyncservice.h
    remote/remotehostinfo.cpp
    remote/remotehostinfo.h
    remote/remotelspmanager.h
    remote/remotelspmanager.cpp
    search/searchquery.h
    search/searchmatch.h
    search/searchindex.cpp
    search/searchindex.h
    search/searchpanel.cpp
    search/searchpanel.h
    search/searchworker.cpp
    search/searchworker.h
    search/searchservice.cpp
    search/searchservice.h
    search/workspaceindexer.cpp
    search/workspaceindexer.h
    search/symbolindex.cpp
    search/symbolindex.h
    lsp/lspmessage.h
    lsp/lsptransport.cpp
    lsp/lsptransport.h
    lsp/processlsptransport.cpp
    lsp/processlsptransport.h
    lsp/clangdmanager.cpp
    lsp/clangdmanager.h
    lsp/lspclient.cpp
    lsp/lspclient.h
    lsp/completionpopup.cpp
    lsp/completionpopup.h
    lsp/lspeditorbridge.cpp
    lsp/lspeditorbridge.h
    lsp/hovertooltipwidget.cpp
    lsp/hovertooltipwidget.h
    lsp/referencespanel.cpp
    lsp/referencespanel.h
    lsp/socketlsptransport.h
    lsp/socketlsptransport.cpp
    project/projecttypes.h
    project/projectmanager.cpp
    project/projectmanager.h
    project/solutiontreemodel.cpp
    project/solutiontreemodel.h
    git/gitservice.cpp
    git/gitservice.h
    git/gitpanel.cpp
    git/gitpanel.h
    git/diffexplorerpanel.h
    git/diffexplorerpanel.cpp
    git/mergeeditor.h
    git/mergeeditor.cpp
    github/ghservice.cpp
    github/ghservice.h
    github/ghpanel.cpp
    github/ghpanel.h
    github/ghbootstrap.cpp
    github/ghbootstrap.h
    editor/symboloutlinepanel.cpp
    editor/symboloutlinepanel.h
    editor/multicursorengine.h
    editor/multicursorengine.cpp
    editor/vimhandler.h
    editor/vimhandler.cpp
    terminal/terminalscreen.cpp
    terminal/terminalscreen.h
    terminal/ptybackend.cpp
    terminal/ptybackend.h
    terminal/terminalview.cpp
    terminal/terminalview.h
    terminal/terminalwidget.cpp
    terminal/terminalwidget.h
    terminal/terminalpanel.cpp
    terminal/terminalpanel.h
    agent/iagentplugin.h
    agent/iagentsettingspageprovider.h
    agent/ichatsessionimporter.h
    agent/iproviderauthintegration.h
    agent/agentorchestrator.cpp
    agent/agentorchestrator.h
    agent/agentplatformbootstrap.cpp
    agent/agentplatformbootstrap.h
    bootstrap/lspbootstrap.cpp
    bootstrap/lspbootstrap.h
    bootstrap/builddebugbootstrap.cpp
    bootstrap/builddebugbootstrap.h
    bootstrap/bridgebootstrap.cpp
    bootstrap/bridgebootstrap.h
    bootstrap/aiservicesbootstrap.h
    bootstrap/aiservicesbootstrap.cpp
    bootstrap/statusbarmanager.h
    bootstrap/statusbarmanager.cpp
    agent/agentproviderregistry.cpp
    agent/agentproviderregistry.h
    agent/agentrequestrouter.cpp
    agent/agentrequestrouter.h
    agent/chatsessionservice.cpp
    agent/chatsessionservice.h
    agent/toolapprovalservice.cpp
    agent/toolapprovalservice.h
    agent/toolpresentation.h
    agent/toolpresentation.cpp
    agent/agentchatpanel.cpp
    agent/agentchatpanel.h
    agent/agentcontroller.cpp
    agent/agentcontroller.h
    agent/agentmodes.h
    agent/agentmodes.cpp
    agent/agentsession.h
    agent/agentsession.cpp
    agent/braincontextbuilder.cpp
    agent/braincontextbuilder.h
    agent/contextbuilder.cpp
    agent/contextbuilder.h
    agent/icontextprovider.h
    agent/itool.h
    agent/itool.cpp
    agent/memorysuggestionengine.cpp
    agent/memorysuggestionengine.h
    agent/projectbrainservice.cpp
    agent/projectbrainservice.h
    agent/projectbraintypes.h
    agent/projectbraintypes.cpp
    agent/promptvariables.cpp
    agent/promptvariables.h
    agent/sessionstore.cpp
    agent/sessionstore.h
    agent/modelpickerdialog.cpp
    agent/modelpickerdialog.h
    agent/tools/filesystemtools.h
    agent/tools/searchworkspacetool.h
    agent/tools/semanticsearchtool.h
    agent/tools/runcommandtool.h
    agent/tools/applypatchtool.h
    agent/tools/idetools.h
    agent/tools/moretools.h
    agent/tools/advancedtools.h
    agent/tools/memorytool.h
    agent/tools/debugtools.h
    agent/tools/screenshottool.h
    agent/tools/introspecttool.h
    agent/tools/httptool.h
    agent/tools/luatool.h
    agent/tools/codegraphtool.h
    agent/tools/buildtools.h
    agent/tools/navigationtools.h
    agent/tools/formatcodetool.h
    agent/tools/refactortool.h
    agent/tools/gitopstool.h
    agent/tools/askusertool.h
    agent/tools/editorcontexttool.h
    agent/tools/changeimpacttool.h
    agent/tools/scratchpadtool.h
    agent/tools/terminalsessiontools.h
    agent/tools/pythontools.h
    agent/tools/packagemanagertools.h
    agent/tools/subagenttool.h
    agent/subagenttool.cpp
    agent/tools/lsptools.h
    agent/tools/projectinfotool.h
    agent/tools/filemanagementtools.h
    agent/tools/clipboardtool.h
    agent/tools/difftool.h
    agent/tools/databasetool.h
    agent/tools/systemtools.h
    agent/tools/notebooktools.h
    agent/tools/githubmcptools.h
    agent/tools/staticanalysistool.h
    agent/notebookstubs.h
    agent/notebookstubs.cpp
    agent/terminalsessionmanager.h
    agent/workspacecontextdetector.h
    ui/markdownrenderer.cpp
    ui/markdownrenderer.h
    agent/promptfileloader.h
    agent/promptfileloader.cpp
    agent/quickchatdialog.cpp
    agent/quickchatdialog.h
    agent/requestlogpanel.cpp
    agent/requestlogpanel.h
    agent/trajectorypanel.cpp
    agent/trajectorypanel.h
    agent/settingspanel.cpp
    agent/settingspanel.h
    agent/memorybrowserpanel.cpp
    agent/memorybrowserpanel.h
    agent/inlinechat/inlinechatwidget.cpp
    agent/inlinechat/inlinechatwidget.h
    mcp/mcpclient.cpp
    mcp/mcpclient.h
    mcp/mcptooladapter.h
    mcp/mcppanel.cpp
    mcp/mcppanel.h
    ui/notificationtoast.cpp
    ui/notificationtoast.h
    ui/settingsdialog.cpp
    ui/settingsdialog.h
    ui/themegallerypanel.cpp
    ui/themegallerypanel.h
    ui/keymapmanager.cpp
    ui/keymapmanager.h
    ui/keymapdialog.cpp
    ui/keymapdialog.h
    ui/dockautohidemanager.cpp
    ui/dockautohidemanager.h
    ui/dock/DockTypes.h
    ui/dock/DockTabBar.h
    ui/dock/DockTabBar.cpp
    ui/dock/DockTitleBar.h
    ui/dock/DockTitleBar.cpp
    ui/dock/ExDockWidget.h
    ui/dock/ExDockWidget.cpp
    ui/dock/DockArea.h
    ui/dock/DockArea.cpp
    ui/dock/DockSplitter.h
    ui/dock/DockSplitter.cpp
    ui/dock/DockToolBar.h
    ui/dock/DockToolBar.cpp
    ui/dock/DockToolBarArea.h
    ui/dock/DockToolBarArea.cpp
    ui/dock/DockToolBarManager.h
    ui/dock/DockToolBarManager.cpp
    ui/dock/DockSideTab.h
    ui/dock/DockSideTab.cpp
    ui/dock/DockSideBar.h
    ui/dock/DockSideBar.cpp
    ui/dock/DockOverlayPanel.h
    ui/dock/DockOverlayPanel.cpp
    ui/dock/DockDropOverlay.h
    ui/dock/DockDropOverlay.cpp
    ui/dock/DockManager.h
    ui/dock/DockManager.cpp
    ui/dock/IToolBarService.h
    commandpalette.cpp
    commandpalette.h
    crashhandler.cpp
    crashhandler.h
    logger.cpp
    logger.h
    resources.qrc
    exorcist.rc
    aiinterface.h
    plugininterface.h
    pluginmanager.cpp
    pluginmanager.h
    plugin/plugingallerypanel.cpp
    plugin/plugingallerypanel.h
    plugin/pluginmarketplaceservice.h
    plugin/pluginmarketplaceservice.cpp
    serviceregistry.cpp
    serviceregistry.h
    startupprofiler.h
    startupprofiler.cpp
    thememanager.cpp
    thememanager.h
    core/ifilesystem.h
    core/ifilewatcher.h
    core/ienvironment.h
    core/iprocess.h
    core/iterminal.h
    core/inetwork.h
    core/qtfilesystem.cpp
    core/qtfilesystem.h
    core/qtfilewatcher.cpp
    core/qtfilewatcher.h
    core/qtenvironment.cpp
    core/qtenvironment.h
    core/qtprocess.cpp
    core/qtprocess.h
    core/qtterminal.cpp
    core/qtterminal.h
    core/nullnetwork.cpp
    core/nullnetwork.h
    build/outputpanel.cpp
    build/outputpanel.h
    build/runlaunchpanel.cpp
    build/runlaunchpanel.h
    build/toolchainmanager.cpp
    build/toolchainmanager.h
    build/cmakeintegration.cpp
    build/cmakeintegration.h
    build/buildtoolbar.cpp
    build/buildtoolbar.h
    build/debuglaunchcontroller.cpp
    build/debuglaunchcontroller.h
    problems/problemspanel.h
    problems/problemspanel.cpp
    editor/filewatchservice.cpp
    editor/filewatchservice.h
    agent/contextpruner.cpp
    agent/contextpruner.h
    agent/autocompactor.cpp
    agent/autocompactor.h
    agent/testscaffold.cpp
    agent/testscaffold.h
    agent/authmanager.cpp
    agent/authmanager.h
    agent/tools/websearchtool.h
    editor/renamesuggestionwidget.cpp
    editor/renamesuggestionwidget.h
    agent/securekeystorage.cpp
    agent/securekeystorage.h
    agent/promptfilemanager.h
    editor/mergeconflictresolver.h
    editor/inlinereviewwidget.cpp
    editor/inlinereviewwidget.h
    agent/modelregistry.h
    agent/modelregistry.cpp
    agent/oauthmanager.h
    agent/domainfilter.h
    git/commitmessagegenerator.h
    git/commitmessagegenerator.cpp
    editor/multichunkeditor.h
    editor/languagecompletionconfig.h
    agent/contexteditor.cpp
    agent/contexteditor.h
    agent/trajectoryrecorder.h
    agent/featureflags.h
    agent/featureflags.cpp
    agent/notebookstubs.h
    agent/reviewmanager.h
    agent/testgenerator.h
    agent/authstatusindicator.h
    agent/promptfilepicker.h
    agent/chatthemeadapter.h
    agent/apikeymanagerwidget.h
    agent/networkmonitor.h
    agent/citationmanager.h
    mcp/mcpservermanager.h
    mcp/mcpservermanager.cpp
    search/workspacechunkindex.h
    search/workspacechunkindex.cpp
    agent/modelconfigwidget.h
    agent/contextinspector.h
    agent/toolcalltrace.h
    agent/trajectoryreplaywidget.h
    agent/promptarchiveexporter.h
    agent/memoryfileeditor.h
    agent/backgroundcompactor.h
    agent/errorstatewidget.h
    agent/setuptestswizard.h
    agent/renameintegration.h
    agent/accessibilityhelper.h
    agent/tooltogglemanager.h
    agent/contextscopeconfig.h
    agent/contextscopeconfig.cpp
    search/embeddingindex.h
    search/embeddingindex.cpp
    search/gitignorefilter.h
    search/regexsearchengine.h
    agent/tools/notebooktools.h
    agent/tools/githubmcptools.h
    agent/chat/chatcontentpart.h
    agent/chat/chatinputwidget.cpp
    agent/chat/chatinputwidget.h
    agent/chat/chatpanelwidget.cpp
    agent/chat/chatpanelwidget.h
    agent/chat/chatsessionhistorypopup.h
    agent/chat/chatsessionmodel.h
    agent/chat/chatthemetokens.h
    agent/chat/chatturnmodel.h
    agent/chat/toolpresentationformatter.h
    sdk/pluginpermission.h
    sdk/icommandservice.h
    sdk/iworkspaceservice.h
    sdk/ieditorservice.h
    sdk/iviewservice.h
    sdk/inotificationservice.h
    sdk/igitservice.h
    sdk/iterminalservice.h
    sdk/idiagnosticsservice.h
    sdk/itaskservice.h
    sdk/ihostservices.h
    sdk/hostservices.cpp
    sdk/hostservices.h
    sdk/contributionregistry.cpp
    sdk/contributionregistry.h
    sdk/permissionguard.h
    plugin/pluginmanifest.cpp
    plugin/pluginmanifest.h
    plugin/icommandhandler.h
    plugin/iviewcontributor.h
    plugin/icompletioncontributor.h
    plugin/ieditorcontributor.h
    plugin/iformattercontributor.h
    plugin/ilanguagecontributor.h
    plugin/ilintercontributor.h
    plugin/isettingscontributor.h
    plugin/itaskcontributor.h
    plugin/ithemecontributor.h
    sdk/cabi/exorcist_plugin_api.h
    sdk/cabi/exorcist_sdk.hpp
    sdk/cabi/cabi_bridge.h
    sdk/cabi/cabi_bridge.cpp
    sdk/luajit/luascriptengine.h
    sdk/luajit/luascriptengine.cpp
    sdk/luajit/luahostapi.h
    sdk/luajit/luahostapi.cpp
    process/exobridgecore.h
    process/exobridgecore.cpp
    process/ipcprotocol.h
    process/ipcprotocol.cpp
    process/bridgeclient.h
    process/bridgeclient.cpp
    process/processmanager.h
    process/processmanager.cpp
    settings/workspacesettings.h
    settings/workspacesettings.cpp
    testing/testdiscoveryservice.h
    testing/testdiscoveryservice.cpp
    testing/testexplorerpanel.h
    testing/testexplorerpanel.cpp
)

# ── Chat renderer: Ultralight (HTML/JS) vs Qt widgets ────────────────────────
if(EXORCIST_USE_ULTRALIGHT)
    target_sources(exorcist PRIVATE
        agent/chat/ultralight/ultralightengine.h
        agent/chat/ultralight/ultralightengine.cpp
        agent/chat/ultralight/ultralightwidget.h
        agent/chat/ultralight/ultralightwidget.cpp
        agent/chat/ultralight/chatjsbridge.h
        agent/chat/ultralight/chatjsbridge.cpp
    )
else()
    target_sources(exorcist PRIVATE
        agent/chat/chatfollowupswidget.h
        agent/chat/chatmarkdownwidget.h
        agent/chat/chatthinkingwidget.h
        agent/chat/chattoolinvocationwidget.h
        agent/chat/chattranscriptview.h
        agent/chat/chattranscriptview.cpp
        agent/chat/chatturnwidget.h
        agent/chat/chatwelcomewidget.h
        agent/chat/chatworkspaceeditwidget.h
    )
endif()

target_link_libraries(exorcist PRIVATE Qt6::Widgets Qt6::Network Qt6::Concurrent Qt6::Sql libluajit)
if(WIN32)
    target_link_libraries(exorcist PRIVATE dbghelp)
endif()
target_include_directories(exorcist PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

if(EXORCIST_USE_TREESITTER)
    target_compile_definitions(exorcist PRIVATE EXORCIST_HAS_TREESITTER)
    target_link_libraries(exorcist PRIVATE
        tree-sitter-core
        ts-grammar-c ts-grammar-cpp ts-grammar-python
        ts-grammar-javascript ts-grammar-typescript
        ts-grammar-rust ts-grammar-json
        ts-grammar-go ts-grammar-yaml ts-grammar-toml
    )
endif()

if(EXORCIST_USE_ULTRALIGHT)
    target_compile_definitions(exorcist PRIVATE EXORCIST_HAS_ULTRALIGHT)
    target_link_libraries(exorcist PRIVATE ultralight-sdk)
    ultralight_deploy_runtime(exorcist)
endif()

if(EXORCIST_USE_LLVM)
    target_include_directories(exorcist PRIVATE ${LLVM_INCLUDE_DIRS})
    target_compile_definitions(exorcist PRIVATE ${LLVM_DEFINITIONS})
endif()

if(WIN32 AND EXORCIST_DEPLOY_QT)
    get_target_property(_qt_core_location Qt6::Core LOCATION)
    get_filename_component(_qt_bin_dir "${_qt_core_location}" DIRECTORY)
    add_custom_command(TARGET exorcist POST_BUILD
        COMMAND "${_qt_bin_dir}/windeployqt.exe"
            --compiler-runtime
            "$<TARGET_FILE:exorcist>"
        VERBATIM
    )
endif()

# Copy Lua script plugins to build output for testing
if(EXISTS "${CMAKE_SOURCE_DIR}/plugins/lua")
    add_custom_command(TARGET exorcist POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_SOURCE_DIR}/plugins/lua"
            "$<TARGET_FILE_DIR:exorcist>/plugins/lua"
        COMMENT "Copying Lua script plugins..."
    )
endif()

# Performance budget: report binary size after build
# Debug builds include debug symbols — use generous limit; Release is tighter.
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(EXORCIST_BINARY_SIZE_BUDGET 52428800 CACHE STRING "Max binary size in bytes (50 MB Release)")
else()
    set(EXORCIST_BINARY_SIZE_BUDGET 209715200 CACHE STRING "Max binary size in bytes (200 MB Debug)")
endif()
add_custom_command(TARGET exorcist POST_BUILD
    COMMAND ${CMAKE_COMMAND}
        -DBINARY_PATH=$<TARGET_FILE:exorcist>
        -DMAX_BYTES=${EXORCIST_BINARY_SIZE_BUDGET}
        -P "${CMAKE_SOURCE_DIR}/cmake/report_binary_size.cmake"
    COMMENT "Checking binary size budget..."
)
